--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>lessandmore</title>
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+  </head>
   <body>
-    <h1>Enter some text to convert!</h1>
+    <h1>lessandmore</h1>
     <form action="." method="POST">
+      <h2>i really like this post...</h2>
       <textarea type="text" name="text"></textarea>
+      <h2>but I wish there was less...</h2>
       <input type="text" name="less">
+      <h2>and more...</h2>
       <input type="text" name="more">
-      <input type="submit" name="text" value="Send">
+      <br>
+      <input type="submit" name="text" value="convert">
     </form>
   </body>
 </html>
