Add converted template

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,9 @@
   <body>
     <h1>lessandmore</h1>
     <form action="." method="POST">
-      <h2>i really like this post...</h2>
+      <h2>I really like this post...</h2>
       <textarea type="text" name="text"></textarea>
-      <h2>but I wish there was less...</h2>
+      <h2>but I wish it had less...</h2>
       <input type="text" name="less">
       <h2>and more...</h2>
       <input type="text" name="more">
