--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,7 @@
 * {
-  font-family: 'menlo';
+  font-family: 'input sans';
   color: #2C302F;
+  font-weight: normal;
 }
 
 body {
@@ -8,7 +9,14 @@ body {
 }
 
 h1 {
+  text-align: center;
+  font-weight: bold;
   font-size: 40px;
+  padding-bottom: 20px;
+}
+
+h2 {
+  font-size: 18px;
 }
 
 textarea {
@@ -29,6 +37,10 @@ input[type=text] {
   padding: 1px;
 }
 
+input[type=text]:focus {
+  border-color: #red;
+}
+
 input[type=submit] {
   margin-top: 20px;
   background: #ccc;
@@ -38,4 +50,12 @@ input[type=submit] {
   border-radius: 5px;
   height: 30px;
   width: 100px;
+}
+
+.converted {
+  line-height: 170%;
+  font-family: 'Source Serif Pro';
+  font-size: 18px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
